@@ -25,20 +25,40 @@
 
 #import "CocosNode.h"
 
+/** an Animation object used within Sprites to perform animations */
+@interface Animation : NSObject
+{
+	NSString *name;
+	float	delay;
+	NSMutableArray *frames;
+}
+
+@property (readwrite,assign) NSString * name;
+@property (readwrite,assign) float delay;
+@property (readwrite,assign) NSMutableArray *frames;
+
++(id) animationWithName: (NSString*) name delay:(float)delay images:image1,... NS_REQUIRES_NIL_TERMINATION;
+-(id) initWithName: (NSString*) name delay:(float)delay vaList:(va_list) args;
+@end
+
+
 /** a 2D sprite */
 @interface Sprite : CocosNode {
 
 	/* OpenGL name for the sprite texture */
 	Texture2D *texture;
+	NSMutableDictionary *animations;
 }
+
+@property (readwrite,assign) Texture2D *texture;
 
 /** creates an sprite from a filepath */
 + (id) spriteFromFile:(NSString *)path;
 /** initializes the sprite from a filepath */
 - (id) initFromFile:(NSString *)path;
 
-- (void) draw;
-- (void) initAnchors;
+/** adds an Animation to the Sprite */
+-(void) addAnimation: (Animation*) animation;
 
-
+-(void) draw;
 @end
