@@ -1,3 +1,9 @@
+25-jun-2008:
+ . added Animation, Animate classes to animates sprites
+ . removed box2d and related stuff to box2d
+ . added / ported Chipmunk Demo
+ . added primitives like drawCircle(), drawPoly(), drawLine(), drawPoint()
+
 24-jun-2008:
  . moved all main.c and other tests files to tests/
  . moved plists, sounds and images to Resources/
